--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
       color: #ccc;
       text-shadow: 0 0 5px #222;
     }
+
+    /* Streamable Video Styles */
+    .video-container {
+      width: 750px;
+      max-width: 95%;
+      margin: 30px auto;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 0 20px rgba(0, 255, 100, 0.5);
+    }
+
+    .video-container h2 {
+      margin-bottom: 15px;
+    }
   </style>
 </head>
 <body>
@@ -131,6 +145,15 @@
   <img src="https://i.imgur.com/uwNCg9t.png" alt="ZNation Logo" class="logo">
 
   <h1>ZNATION's Server Updates</h1>
+  
+  <!-- Streamable Video Section -->
+  <div class="video-container">
+    <h2>Server Showcase</h2>
+    <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%">
+      <iframe allow="fullscreen;autoplay" allowfullscreen height="100%" src="https://streamable.com/e/p3752r?autoplay=1&muted=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe>
+    </div>
+  </div>
+
   <h2>Server Progress</h2>
 
   <ul>
@@ -142,11 +165,21 @@
     <li><span>Custom NPC Spawns</span> <span class="checkbox">❌ Not Done</span></li>
     <li><span>Trader Shop Pricing</span> <span class="checkbox">❌ Not Done</span></li>
     <li><span>Custom Welcome Signs</span> <span class="checkbox">❌ In Progess</span></li>
+    <li><span>Custom Swamps</span> <span class="checkbox">❌ In Progess</span></li>
+    <li><span>Custom Lakes</span> <span class="checkbox">❌ In Progess</span></li>
+    <li><span>Custom ponds</span> <span class="checkbox">❌ In Progess</span></li>
+    <li><span>Butcher shops</span> <span class="checkbox">❌ In Progess</span></li>
+    <li><span>Meat Prosccesing Factories</span> <span class="checkbox">❌ In Progess</span></li>
+    <li><span>PvP Zones</span> <span class="checkbox">❌ In Progess</span></li>
+    <li><span>scrapeyard</span> <span class="checkbox">❌ In Progess</span></li>
+    <li><span>Jobsites</span> <span class="checkbox">❌ In Progess</span></li>
+    <li><span>starter Loadouts</span> <span class="checkbox">❌ In Progess</span></li>
+    <li><span>SpawnPoints</span> <span class="checkbox">❌ In Progess</span></li>
   </ul>
 
   <a class="discord-btn" href="https://discord.gg/HBwC3uz4hp" target="_blank">💬 Join Our Discord</a>
 
-  <footer>© 2025 ZNATION | Built for DayZ Survivors</footer>
+  <footer>© 2025 ZNATION | Built By A Survivor for Survivors</footer>
 
 </body>
 </html>
