Fix typo in server launch message

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <!-- Main Content -->
   <img src="https://i.imgur.com/uwNCg9t.png" alt="ZNation Logo" class="logo">
 
-  <h1>ZNATION's Server Will luanch in 11-19-2025</h1>
+  <h1>Srry but Server Will luanch 11-19-2025</h1>
   
   <!-- Streamable Video Section -->
   <div class="video-container">
