--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <div class="video-container">
     <h2>Server Showcase</h2>
     <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%">
-      <iframe allow="fullscreen;autoplay" allowfullscreen height="100%" src="https://streamable.com/vtmhjv?autoplay=1&muted=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe>
+      <iframe allow="fullscreen;autoplay" allowfullscreen height="100%" src="https://streamable.com/e/vtmhjv??autoplay=1&muted=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe>
     </div>
   </div>
 
