--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   <h2>Server Progress</h2>
 
   <ul>
-    <li><span>starter Bases</span> <span class="checkbox">❌ In Progess</span></li>
+    <li class="done"><span>starter Bases</span> <span class="checkbox">✅ Done</span></li>
     <li class="done"><span>Unlimited Stamina</span> <span class="checkbox">✅ Done</span></li>
     <li class="done"><span>Traders</span> <span class="checkbox">✅ Done</span></li>
     <li class="done"><span>2.5x Boosted Loot</span> <span class="checkbox">✅ Done</span></li>
