Mark Trader Shop Pricing as done

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <li class="done"><span>2.5x Boosted Loot</span> <span class="checkbox">✅ Done</span></li>
     <li><span>Vehicle Spawn Full</span> <span class="checkbox">❌ Not Done</span></li>
     <li><span>Custom NPC Spawns</span> <span class="checkbox">❌ Not Done</span></li>
-    <li><span>Trader Shop Pricing</span> <span class="checkbox">❌ Not Done</span></li>
+    <li class="done"><span>Trader Shop Pricing</span> <span class="checkbox">✅ Done</span></li>
     <li class="done"><span>Custom Welcome Signs</span> <span class="checkbox">✅ Done</span></li>
     <li><span>Custom Swamps</span> <span class="checkbox">❌ In Progess</span></li>
     <li><span>Custom Lakes</span> <span class="checkbox">❌ In Progess</span></li>
