Update image source for Custom Towns slide

--- a/zomin.html
+++ b/zomin.html
@@ -37,7 +37,7 @@
   <div class="slider">
     <div class="slider-track">
       <div class="slide"><img src="assets/img/group image 2.jpeg"><div class="slide-overlay">ZOMIN — Wilderness</div></div>
-      <div class="slide"><img src="assets/img/showcase6.png"><div class="slide-overlay">ZOMIN — Custom Towns</div></div>
+      <div class="slide"><img src="assets/img/SQUAD IMAGE.jpg"><div class="slide-overlay">ZOMIN — Custom Towns</div></div>
       <div class="slide"><img src="assets/img/showcase3.png"><div class="slide-overlay">ZOMIN — Events</div></div>
     </div>
     <div class="arrow left">&#9664;</div>
